--- a/assets/about/aboutUs.html
+++ b/assets/about/aboutUs.html
@@ -8,19 +8,20 @@
     <link rel="shortcut icon" href="../image/icon.png" type="image/x-icon">
 </head>
 <body>
-    <main>
-        <div class="logo-navegador">
+        <header class="logo-navegador">
             <nav>
                 <a href="../../index.html">Home</a>
                 <a href="#">About</a>
                 <a href="../conctat/contact.html">Contact</a>
+                <a href="../infomation/information.html">Information</a>
+                <a href="../benefits tips/benefitstips.html">Benefits-tips</a>
             </nav>
                 <img src="../image/logo.png" alt="Logo Mindi Travels">
-        </div>
-        <header class="about1">
-            <h1>About Us</h1>
-            <h2>We will help you indirectly</h2>
         </header>
+    <main>  
+        <div class="about1">
+            <h1>About Us</h1>
+        </div>
         <section class="about2">
             <h2>We will help you indirectly</h2>
             <div>
