--- a/assets/benefits tips/benefitstips.html
+++ b/assets/benefits tips/benefitstips.html
@@ -8,6 +8,46 @@
     <link rel="shortcut icon" href="../image/icon.png" type="image/x-icon">
 </head>
 <body>
-    
+    <header class="logo-navegador">
+        <nav>
+            <a href="../../index.html">Home</a>
+            <a href="../about/aboutUs.html">About</a>
+            <a href="../conctat/contact.html">Contact</a>
+            <a href="../infomation/information.html">Information</a>
+            <a href="#">Benefiststips</a>
+        </nav>
+        <img src="../image/logo.png" alt="Logo Mindi Travels">
+    </header>
+    <main id="cuerpo">
+        <div>
+            <img src="../image/couple.jpg" alt="couple image">
+            <ol>
+                <il>
+                    Benefits of traveling
+                    <ul>
+                        <il>Improves mood</il>
+                        <il>Reduces stress</il>
+                        <il>Traveling produces happiness</il>
+                    </ul>
+                </il>
+            </ol>
+        </div>
+        <div>
+            <img src="../image/map.jpg" alt="map image">
+            <ol>
+                <il>
+                    Tips for traveling
+                    <ul>
+                        <il>Check your documentation before traveling</il>
+                        <il>Enjoy the moment</il>
+                        <il>Check the weather forecasts</il>
+                    </ul>
+                </il>
+            </ol>
+        </div>
+    </main>
+    <footer class="piedep">
+        <p>Created by Maximiliano Ledesma</p>
+    </footer>
 </body>
 </html>
