--- a/assets/infomation/information.html
+++ b/assets/infomation/information.html
@@ -8,6 +8,52 @@
     <link rel="shortcut icon" href="../image/icon.png" type="image/x-icon">
 </head>
 <body>
-    
+    <header class="logo-navegador">
+        <nav>
+            <a href="../../index.html">Home</a>
+            <a href="../about/aboutUs.html">About</a>
+            <a href="../conctat/contact.html">Contact</a>
+            <a href="#">Information</a>
+            <a href="../benefits tips/benefitstips.html">Benefists-tips</a>
+        </nav>
+        <img src="../image/logo.png" alt="Logo Mindi Travels">
+    </header>
+    <main>
+        <section id="tabla">
+            <article class="encabezado">
+                <h1>More information</h1>
+                <h2>We will hold online meetings to better explain some things</h2>
+            </article>
+            <table>
+                <thead>
+                  <tr>
+                    <th>Topic</th>
+                    <th>Schedule</th>
+                    <th>Date</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Air travel</td>
+                    <td>1:00 P.M</td>
+                    <td>20/09</td>
+                  </tr>
+                  <tr>
+                    <td>Boat trips</td>
+                    <td>4:00 P.M</td>
+                    <td>02/10</td>
+                  </tr>
+                  <tr>
+                    <td>Travel savings</td>
+                    <td>9:00 A.M</td>
+                    <td>07/10</td>
+                  </tr>
+                </tbody>
+              </table>              
+        </section>
+    </main>
+    <footer class="piedep">
+        <p>Created by Maximiliano Ledesma</p>
+    </footer>
 </body>
 </html>
