--- a/assets/conctat/contact.html
+++ b/assets/conctat/contact.html
@@ -9,18 +9,20 @@
 </head>
 <body>
     <main>
-        <div class="logo-navegador">
+        <header class="logo-navegador">
             <nav>
                 <a href="../../index.html">Home</a>
                 <a href="../about/aboutUs.html">About</a>
                 <a href="#">Contact</a>
+                <a href="../infomation/information.html">Information</a>
+                <a href="../benefits tips/benefitstips.html">Benefits-tips</a>
             </nav>
                 <img src="../image/logo.png" alt="Logo Mindi Travels">
-        </div>
-        <header class="contact1">
-            <h1>Contact</h1>
-            <h2>you can contact us</h2>
         </header>
+        <section class="contact1">
+            <h1>Contact</h1>
+            <h2>You can contact us</h2>
+        </section>
             <div class="contact2">
                 <img src="../image/window.jpg" alt="windows image">
                 <p>We will answer your messages on weekends</p>
