--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link rel="shortcut icon" href="./assets/image/icon.png" type="image/x-icon">
 </head>
 <body>
-    <main>
-        <div class="logo-navegador">
+        <header class="logo-navegador">
             <nav>
                 <a href="#">Home</a>
                 <a href="./assets/about/aboutus.html">About</a>
                 <a href="./assets/conctat/contact.html">Contact</a>
+                <a href="./assets/infomation/information.html">Information</a>
+                <a href="./assets/benefits tips/benefitstips.html">Benefits-tips</a>
             </nav>
             <img src="./assets/image/logo.png" alt="Logo Mindi Travels">
-        </div>
-        <header class="head">
+        </header>
+    <main>
+        <section class="primimg">
             <h1> MINDY TRAVELS</h1>
             <h2>HOME</h2>
-        </header>
-            <div class="sec1">
-                <img src="./assets/image/woman.jpg" alt="main image">
-            </div>
+            <img src="./assets/image/woman.jpg" alt="main image">
+        </section>
             <div class="sec2">
                 <p>Thoughout our lives, we all would like to travel and see the world. on this page we can give you some facilities so that you can travel or how to organize yourself when doing so.</p>
                 <img src="./assets/image/airport.jpg" alt="plane image">
