Nuevo commit corregido

--- a/assets/about/aboutUs.html
+++ b/assets/about/aboutUs.html
@@ -14,7 +14,7 @@
                 <a href="#">About</a>
                 <a href="../conctat/contact.html">Contact</a>
                 <a href="../infomation/information.html">Information</a>
-                <a href="../benefits tips/benefitstips.html">Benefits-tips</a>
+                <a href="../benefits-tips/benefitstips.html">Benefits-tips</a>
             </nav>
                 <img src="../image/logo.png" alt="Logo Mindi Travels">
         </header>
