--- a/assets/infomation/information.html
+++ b/assets/infomation/information.html
@@ -14,16 +14,14 @@
             <a href="../about/aboutUs.html">About</a>
             <a href="../conctat/contact.html">Contact</a>
             <a href="#">Information</a>
-            <a href="../benefits tips/benefitstips.html">Benefists-tips</a>
+            <a href="../benefits-tips/benefitstips.html">Benefists-tips</a>
         </nav>
         <img src="../image/logo.png" alt="Logo Mindi Travels">
     </header>
     <main>
         <section id="tabla">
-            <article class="encabezado">
-                <h1>More information</h1>
-                <h2>We will hold online meetings to better explain some things</h2>
-            </article>
+                <h2>More information</h2>
+                <h3>We will hold online meetings to better explain some things</h3>
             <table>
                 <thead>
                   <tr>
