--- a/assets/benefits-tips/benefitstips.html
+++ b/assets/benefits-tips/benefitstips.html
@@ -22,27 +22,27 @@
         <div>
             <img src="../image/couple.jpg" alt="couple image">
             <ol>
-                <il>
+                <li>
                     Benefits of traveling
                     <ul>
-                        <il>Improves mood</il>
-                        <il>Reduces stress</il>
-                        <il>Traveling produces happiness</il>
+                        <li>Improves mood</li>
+                        <li>Reduces stress</li>
+                        <li>Traveling produces happiness</li>
                     </ul>
-                </il>
+                </li>
             </ol>
         </div>
         <div>
             <img src="../image/map.jpg" alt="map image">
             <ol>
-                <il>
+                <li>
                     Tips for traveling
                     <ul>
-                        <il>Check your documentation before traveling</il>
-                        <il>Enjoy the moment</il>
-                        <il>Check the weather forecasts</il>
+                        <li>Check your documentation before traveling</li>
+                        <li>Enjoy the moment</li>
+                        <li>Check the weather forecasts</li>
                     </ul>
-                </il>
+                </li>
             </ol>
         </div>
     </main>
