--- a/assets/conctat/contact.html
+++ b/assets/conctat/contact.html
@@ -15,7 +15,7 @@
                 <a href="../about/aboutUs.html">About</a>
                 <a href="#">Contact</a>
                 <a href="../infomation/information.html">Information</a>
-                <a href="../benefits tips/benefitstips.html">Benefits-tips</a>
+                <a href="../benefits-tips/benefitstips.html">Benefits-tips</a>
             </nav>
                 <img src="../image/logo.png" alt="Logo Mindi Travels">
         </header>
