--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="shortcut icon" href="./assets/image/icon.png" type="image/x-icon">
 </head>
 <body>
-        <header class="logo-navegador">
-            <nav>
-                <a href="#">Home</a>
-                <a href="./assets/about/aboutus.html">About</a>
-                <a href="./assets/conctat/contact.html">Contact</a>
-                <a href="./assets/infomation/information.html">Information</a>
-                <a href="./assets/benefits tips/benefitstips.html">Benefits-tips</a>
-            </nav>
+    <header class="logo-navegador">
+        <nav>
+            <a href="#">Home</a>
+            <a href="./assets/about/aboutus.html">About</a>
+            <a href="./assets/conctat/contact.html">Contact</a>
+            <a href="./assets/infomation/information.html">Information</a>
+            <a href="./assets/benefits-tips/benefitstips.html">Benefits-tips</a>
+        </nav>
             <img src="./assets/image/logo.png" alt="Logo Mindi Travels">
         </header>
     <main>
