--- a/assets/benefits-tips/benefitstips.html
+++ b/assets/benefits-tips/benefitstips.html
@@ -21,8 +21,11 @@
     <main id="cuerpo">
         <div>
             <img src="../image/couple.jpg" alt="couple image">
+            <img src="../image/map.jpg" alt="map image">
+        </div>
+        <div class="listas">
             <ol>
-                <li>
+                <li class="l1">
                     Benefits of traveling
                     <ul>
                         <li>Improves mood</li>
@@ -30,12 +33,7 @@
                         <li>Traveling produces happiness</li>
                     </ul>
                 </li>
-            </ol>
-        </div>
-        <div>
-            <img src="../image/map.jpg" alt="map image">
-            <ol>
-                <li>
+                <li class="l2">
                     Tips for traveling
                     <ul>
                         <li>Check your documentation before traveling</li>
