--- a/assets/conctat/contact.html
+++ b/assets/conctat/contact.html
@@ -20,8 +20,8 @@
                 <img src="../image/logo.png" alt="Logo Mindi Travels">
         </header>
         <section class="contact1">
-            <h1>Contact</h1>
-            <h2>You can contact us</h2>
+            <h2>CONTACT</h2>
+            <h3>You can contact us</h3>
         </section>
             <div class="contact2">
                 <img src="../image/window.jpg" alt="windows image">
@@ -29,7 +29,7 @@
                 </div>
             <div class="contact3">
                 <a href="mailto:mindytravel@mh.com">E-Mail: mindytravel@mh.com</a>
-                <a href="phoneto:00231112">Phone: 00231112</a>
+                <a href="tel:00231112">Phone: 00231112</a>
             </div>
     </main>
     <footer class="piedep">
