--- a/assets/about/aboutUs.html
+++ b/assets/about/aboutUs.html
@@ -20,7 +20,7 @@
         </header>
     <main>  
         <div class="about1">
-            <h1>About Us</h1>
+            <h1>ABOUT US</h1>
         </div>
         <section class="about2">
             <h2>We will help you indirectly</h2>
